--- a/main/main.css
+++ b/main/main.css
@@ -37,8 +37,9 @@ body {
     font-size: 20px;
     float: right;
     line-height: 50px;
+    margin: 10px 0;
     padding: 0 20px;
-    padding-right: 30px;
+    padding-right: 20px;
     text-decoration: none;
     color: rgb(221, 221, 221);
 }
