--- a/main/main.css
+++ b/main/main.css
@@ -6,6 +6,7 @@ body {
 
 #h1 {
     color: white;
+    text-shadow: 2px 2px 4px #000000;
     text-align: left;
     font-size: 40px;
     font-family: 'Russo One', sans-serif;
@@ -45,8 +46,38 @@ body {
 }
 .navbar li a:hover {
     background-color: rgb(15, 11, 230);
-    color: #fff;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
 }
 
+.img{
+    border-radius: 50%;
+}
 
+#plumberOne{
+    float: left;
+    margin-top: 200px;
+    margin-left: 20px;
+}
 
+#welcome{
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+    background-color: #5c5f5c76;
+    width: 600px;
+    height: 100px;
+    margin-top: 20%;
+    margin-right: 75px;
+    padding-bottom: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    float: right;
+    position: relative;
+}
+#banner{
+    background-color: rgba(0, 0, 255, 0.461);
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    margin-top: 45em;
+}
